--- a/src/app/shared/ui-components/theme/theme.scss
+++ b/src/app/shared/ui-components/theme/theme.scss
@@ -7,6 +7,7 @@
 @use './typography';
 @use './spacing';
 @use './material-theme';
+@use './accessibility-validation';
 
 // ===== RESET E BASE =====
 * {
